# contract

./: CHANGES.md  README.md  RELEASE.md  contract.opam  dune-project
.github/workflows/: ci.yml
examples/: dune  users_api.ml
lib/: codec.ml  codec.mli  contract.ml  contract.mli  dune  endpoint.ml  endpoint.mli  error.ml  error.mli  json_codec.ml  json_codec.mli  openapi.ml  openapi.mli  path_template.ml  path_template.mli  request.ml  request.mli  response.ml  response.mli  schema.ml  schema.mli  validate.ml  validate.mli
test/: dune  test_codec.ml  test_contract.ml  test_endpoint.ml  test_json_codec.ml  test_openapi.ml  test_path_template.ml  test_response.ml  test_validate.ml
test/fixtures/: openapi_invoices_api.json
