opam-version: "2.0"
maintainer: "Thomas B. <funwithcthulhu29@gmail.com>"
authors: ["Thomas B."]
license: "MIT"
homepage: "https://github.com/funwithcthulhu/contract"
bug-reports: "https://github.com/funwithcthulhu/contract/issues"
dev-repo: "git+https://github.com/funwithcthulhu/contract.git"
doc: "https://github.com/funwithcthulhu/contract#readme"
tags: ["http" "api" "contract" "openapi"]
synopsis: "Typed HTTP API contracts for OCaml"
description: """
contract describes REST-style HTTP API contracts as typed OCaml values.
The current package provides a pure core for endpoint definitions, parameter
and JSON decoding, request validation, and OpenAPI 3.0.3 output.
"""
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.11"}
  "yojson" {>= "2.0.0"}
  "alcotest" {with-test & >= "1.9.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
